added page size to courseController
